--- a/authentication-center/src/main/resources/application.yml
+++ b/authentication-center/src/main/resources/application.yml
@@ -9,5 +9,11 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+  application:
+    name: authentication-center
 server:
   port: 8080
+eureka:
+  client:
+    service-url:
+      defaultZone: http://glj:glj@127.0.0.1:2100/eureka/
