修改配置文件

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -14,3 +14,4 @@ eureka:
       defaultZone: http://glj:glj@127.0.0.1:2100/eureka/
   instance:
     prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
