修改配置文件

--- a/oauth2-sso-client-member/src/main/resources/application.yml
+++ b/oauth2-sso-client-member/src/main/resources/application.yml
@@ -19,3 +19,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://glj:glj@127.0.0.1:2100/eureka/
+  instance:
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
