--- a/oauth2-sso-client-member-produce/src/main/resources/application.yml
+++ b/oauth2-sso-client-member-produce/src/main/resources/application.yml
@@ -15,3 +15,6 @@ eureka:
   instance:
     prefer-ip-address: true
     instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+#swagger
+swagger2:
+  enable: true
